[config] update config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-hacker
-title: Marc_alx's Blog
+title: Marc_Alx's Blog
 description: Marc_Alx's personal apge
 exclude: [README.md, LICENCSE, .gitignore]
 timezone: Europe/Paris
