--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-hacker
 title: Marc_Alx's Blog
-description: Marc_Alx's personal apge
+description: Marc_Alx's personal page
 exclude: [README.md, LICENCSE, .gitignore]
 timezone: Europe/Paris
 author: Marc_Alx
