[config] update site title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-hacker
-title: Marc_Alx's Blog
+title: Marc_Alx's portfolio
 description: Marc_Alx's personal page
 exclude: [README.md, LICENCSE, .gitignore]
 timezone: Europe/Paris
